--- a/src/main/resources/templates/bookList.html
+++ b/src/main/resources/templates/bookList.html
@@ -3,7 +3,8 @@
 <head>
     <script type="text/javascript" th:src="@{https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js}"></script>
     <link th:href="@{https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css}" rel="stylesheet"/>
-    <meta charset="UTF-8"/><title>书籍列表</title>
+    <meta charset="UTF-8"/>
+    <title>书籍列表</title>
 
 <body>
 
